Reconfigurated the User Preferences and specifically the user_events actions