@@ -9,13 +9,11 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -30,7 +28,6 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             FilterChain filterChain
     ) throws ServletException, IOException {
 
-        // 1. Πάρε το Authorization header
         String authHeader = request.getHeader("Authorization");
 
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
@@ -38,39 +35,28 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             return;
         }
 
-        // 2. Πάρε το token
         String token = authHeader.substring(7);
 
-        // 3. Έλεγχος valid token
         if (!jwtUtil.validateToken(token)) {
             filterChain.doFilter(request, response);
             return;
         }
 
-        // 4. Πάρε email από το token
         String email = jwtUtil.extractEmail(token);
-
-        // 5. Πάρε role από το token
         String role = jwtUtil.extractRole(token);
 
+        if (email == null || email.isBlank()) {
+            filterChain.doFilter(request, response);
+            return;
+        }
 
-        var authorities = Collections.singletonList(
-                new SimpleGrantedAuthority("ROLE_" + role)
-        );
+        var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + (role == null ? "USER" : role)));
 
-
-// 7. Φτιάξε authentication object με authorities
         UsernamePasswordAuthenticationToken authToken =
-                new UsernamePasswordAuthenticationToken(
-                        email,
-                        null,
-                        authorities
-                );
+                new UsernamePasswordAuthenticationToken(email, null, authorities);
 
-        // 8. Βάλε τον χρήστη στο SecurityContext
         SecurityContextHolder.getContext().setAuthentication(authToken);
 
         filterChain.doFilter(request, response);
     }
 }
-
